--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Flask App on Windows Machine
+name: Deploy Flask App on Windows
 
 on:
   push:
@@ -20,8 +20,13 @@ jobs:
 
     - name: Install Dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip show flask  # Debugging step
+
+    - name: Kill Previous Flask Instances
+      run: |
+        taskkill /IM python.exe /F || echo "No previous Flask instance running"
 
     - name: Run Flask Application
-      run: |
-        start /B cmd /C "app\start_server.bat"
+      run: cmd /c start "" "app\start_server.bat"
