Fix batch script execution in deploy file - GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         taskkill /IM python.exe /F || echo "No previous Flask instance running"
 
     - name: Run Flask Application
-      run: cmd /c start "" "app\start_server.bat"
+      run: Start-Process -FilePath "cmd.exe" -ArgumentList "/C app\start_server.bat" -NoNewWindow -Wait
