--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Flask App on Windows
+name: Deploy Flask App on Windows Machine
 
 on:
   push:
@@ -20,13 +20,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip show flask  # Debugging step
-
-    # - name: Kill Previous Flask Instances
-    #   run: |
-    #     taskkill /IM python.exe /F || echo "No previous Flask instance running"
 
     - name: Run Flask Application
       shell: cmd
