--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,15 +24,13 @@ jobs:
 
     - name: Download and Set Up NGROK
       run: |
-      curl -o ngrok.zip https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip
-      powershell -Command "Expand-Archive -Path ngrok.zip -DestinationPath ."
-      ./ngrok.exe authtoken YOUR_NGROK_AUTH_TOKEN
+      curl -o ngrok.zip https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip powershell -Command "Expand-Archive -Path ngrok.zip -DestinationPath ." ./ngrok.exe authtoken YOUR_NGROK_AUTH_TOKEN
 
     - name: Start NGROK
       run: Start-Process -NoNewWindow -FilePath "./ngrok.exe" -ArgumentList "http 5000"
 
-    - name: Run Flask Application
+    - name: Start Flask Application
       shell: cmd
-      run: |
-          app\start_server.bat
+      run: python app/app.py
+   
 
